feat:agrega Swagger para exponer documentación interactiva de la API